--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
+    "react-autobind": "^1.0.6",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
     "redux": "^3.7.2"
